Fix Unclickable area on mobile

--- a/view/css/main.css
+++ b/view/css/main.css
@@ -119,7 +119,7 @@ footer ul.list-inline li {
 .rightBar div{
     z-index: 10;
 }
-.videosList{
+#videosList{
     z-index: 1;
 }
 /* end for main video */
